fix warning message alignment

--- a/src/scss/layout/_filter.scss
+++ b/src/scss/layout/_filter.scss
@@ -1,3 +1,6 @@
+.filter-section {
+  text-align: center;
+}
 .form {
   height: 50px;
   box-sizing: border-box;
